--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,3 +6,13 @@ h2 {
 p {
   margin: 0.5rem 0 1rem 0;
 }
+
+@media (max-width: 739px) {
+  h2 {
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 16px;
+  }
+}
